--- a/home.html
+++ b/home.html
@@ -7,6 +7,7 @@
 		<link rel="stylesheet" type="text/css" href="style.css">
 	</head>
 	<body>
+		<p>This is my test commit</p>
 		<center>
 			<img src="google.png" class="google-logo">
 			<form>
