My second commit

--- a/home.html
+++ b/home.html
@@ -8,6 +8,7 @@
 	</head>
 	<body>
 		<p>This is my test commit</p>
+		<p>This is my second commit</p>
 		<center>
 			<img src="google.png" class="google-logo">
 			<form>
