--- a/home.html
+++ b/home.html
@@ -7,8 +7,9 @@
 		<link rel="stylesheet" type="text/css" href="style.css">
 	</head>
 	<body>
-		<p>This is my test commit</p>
+		<p >This is my test commit</p>
 		<p>This is my second commit</p>
+		<em> test </em>
 		<center>
 			<img src="google.png" class="google-logo">
 			<form>
